--- a/index.html
+++ b/index.html
@@ -488,16 +488,18 @@
                         <p>
                             <h2 style="color: rgb(90, 149, 238);"> FEEDBACK ELECTRICAL & SERVICES PRIVATE LIMITED <i> suite of maintenance and installation services to the commercial.</i></h2>
                         </p>
-                        <p>
-                            <ul>
-                                <li>Electrical Design & Construction</li>
-                                <li>Switchbpard & Metering alterations Stand by generators</li>
-                                <li>Unintrupted Power Supply (UPS)</li>
-                                <li>Energy Management Systems/power audits Light and power installation</li>
-                                <li>Exit and Emergencylighting</li>
-                                <li>24/7 maintenance and servicing</li>
-                            </ul>
-                        </p>
+                        <div style="color: rgb(98, 14, 14);">
+                            <p>
+                                <ul>
+                                    <li>Electrical Design & Construction</li>
+                                    <li>Switchbpard & Metering alterations Stand by generators</li>
+                                    <li>Unintrupted Power Supply (UPS)</li>
+                                    <li>Energy Management Systems/power audits Light and power installation</li>
+                                    <li>Exit and Emergencylighting</li>
+                                    <li>24/7 maintenance and servicing</li>
+                                </ul>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div>
