--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
         <div class="col-sm-8 col-sm-offset-2 text-center">
             <div class="section-title">
                 <h1>Our <span class="colored-text">MAJOR PROJECTS</span></h1>
+                <span class="border-line"></span>
             </div>
         </div>
         <div class="col-sm-6" style="align-content: right: inherit;;">
@@ -612,7 +613,9 @@
 
         <div class="col-sm-8 col-sm-offset-2 text-center">
             <div class="section-title">
+
                 <h1>Our <span class="colored-text">SERVICES</span></h1>
+                <span class="border-line"></span>
             </div>
         </div>
 
@@ -623,8 +626,8 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-1.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-1.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/IT.jpeg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/IT.jpeg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
                                     <h6>IT SERVICES</h6>
@@ -638,8 +641,8 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-2.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-2.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/TELECOM.jpeg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/TELECOM.jpeg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
                                     <h6>TELECOM SERVICES</h6>
@@ -653,8 +656,8 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-3.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-3.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/CONSTRUCTION SERVICES.jpeg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/CONSTRUCTION SERVICES.jpeg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
                                     <h6>CONSTRUCTION SERVICES</h6>
@@ -671,8 +674,8 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-4.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-4.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/ELECTRICY SER..jpeg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="./images/SERVICES/ELECTRICY SER..jpeg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
                                     <h6>ELECTRICAL SERVICES</h6>
@@ -686,11 +689,11 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-5.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-5.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/SOLAR SYSTEM.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/SOLAR SYSTEM.jpg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>Branding</h6>
+                                    <h6>SOLAR PANNEL</h6>
                                 </div>
                             </div>
                         </a>
@@ -701,11 +704,11 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-6.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-6.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/LT LINE.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/LT LINE.jpg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>Branding</h6>
+                                    <h6>LT LINE</h6>
                                 </div>
                             </div>
                         </a>
@@ -719,11 +722,11 @@
             <div class="col-sm-4">
                 <div class="entry-thumb portfolio-thumb">
                     <div class="imgoverlay text-light">
-                        <a href="images/work-7.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]">
-                            <img src="images/work-7.jpg" class="img-responsive" alt="">
+                        <a href="images/SERVICES/Civil Engineering works.jpg" class="load-content prettyPhoto" data-gal="prettyPhoto[name_gallery]" width="800" height="600">
+                            <img src="images/SERVICES/Civil Engineering works.jpg" class="img-responsive" alt="" width="800" height="600">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>Branding</h6>
+                                    <h6>CIVIL WORK SERVICE</h6>
                                 </div>
                             </div>
                         </a>
@@ -738,7 +741,7 @@
                             <img src="images/work-8.jpg" class="img-responsive" alt="">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>Branding</h6>
+                                    <h6>MAN POWER</h6>
                                 </div>
                             </div>
                         </a>
@@ -753,7 +756,7 @@
                             <img src="images/work-9.jpg" class="img-responsive" alt="">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>Branding</h6>
+                                    <h6>trust</h6>
                                 </div>
                             </div>
                         </a>
