--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                             <img src="images/work-9.jpg" class="img-responsive" alt="">
                             <div class="overlay"><span class="overlaycolor"></span>
                                 <div class="overlayinfo" style="margin-top: -11px;">
-                                    <h6>trust</h6>
+                                    <h6>DATA ANALYSIS</h6>
                                 </div>
                             </div>
                         </a>
