--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                             <i class="ion-ios-location-outline"></i>
                             <h4>INDIA, ASIA</h4>
                         </div>
-                        <div class="col-sm-4 margin-bottom30 text-center">
+                        <div class="col-sm-4 margin-bottom30 text-center" style="padding-left: 0px;">
                             <i class="ion-ios-email-outline"></i>
                             <h4>feedback.electrical79032@gmail.com</h4>
                         </div>
