--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                     <div class="row contact-details">
                         <div class="col-sm-4 margin-bottom30 text-center">
                             <i class="ion-ios-location-outline"></i>
-                            <h4>INDIA, ASIA</h4>
+                            <h4>South Ex. Tower-1, Bldg. No.389, 1st Floor, Office No.101 & 102, Lila Ram Market, South Extn-2, New Delhi-110049 (India)</h4>
                         </div>
                         <div class="col-sm-4 margin-bottom30 text-center" style="padding-left: 0px;">
                             <i class="ion-ios-email-outline"></i>
