--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
                 <div class="col-sm-4 margin-bottom30">
                     <div class="team-box">
-                        <img src="images/team-1.jpg" class="img-responsive" alt="">
+                        <img src="images/SERVICES/WORKS 1.jpeg" class="img-responsive" alt="">
 
                         <ul class="social list-inline">
                             <li><a href="#"><i class="icon icon-social-twitter"></i></a></li>
@@ -295,7 +295,7 @@
                 <!--team col end-->
                 <div class="col-sm-4 margin-bottom30">
                     <div class="team-box">
-                        <img src="images/team-2.jpg" class="img-responsive" alt="">
+                        <img src="images/SERVICES/WORKS 2.jpeg" class="img-responsive" alt="">
                         <ul class="social list-inline">
                             <li><a href="#"><i class="icon icon-social-twitter"></i></a></li>
                             <li><a href="#"><i class="icon icon-social-facebook"></i></a></li>
@@ -310,7 +310,7 @@
                 <!--team col end-->
                 <div class="col-sm-4 margin-bottom30">
                     <div class="team-box">
-                        <img src="images/team-3.jpg" class="img-responsive" alt="">
+                        <img src="images/SERVICES/WORKS 3.jpeg" class="img-responsive" alt="" width="414" height="450">
                         <ul class="social list-inline">
                             <li><a href="#"><i class="icon icon-social-twitter"></i></a></li>
                             <li><a href="#"><i class="icon icon-social-facebook"></i></a></li>
